# critical_plane

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  readme.md
bench/: CMakeLists.txt
include/: convex_hull.hpp  data_structures.hpp  file_handling.hpp  findley.hpp  geometry.hpp  stress.hpp  tri_hemisphere.hpp
src/: CMakeLists.txt  cli_main.cpp  convex_hull.cpp  file_handling.cpp  findley.cpp  geometry.cpp  stress.cpp  tri_hemisphere.cpp
tests/: CMakeLists.txt  run_tests.cpp  test_convex_hull.hpp  test_findley.hpp  test_geometry.hpp  test_orientation.hpp  test_stress.hpp  test_tri_hemisphere.hpp
